use dynamic vh for min section height, remove ::before from body background as it was causing issues on Safari, update version

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -6,22 +6,15 @@
 * Date: March 2026
 * Site Info: Digging for Shovels Official Band Website
 * Content: Theme Styles for Digging for Shovels
-* Version: 3.0
+* Version: 3.1
 */
 
-html::before,
-body::before,
-main::before {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+body {
   background-color: var(--color-primary);
   background-image: linear-gradient(transparent, var(--color-shade));
-  background-size: cover;
-  z-index: -1;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover; 
 }
 
 header {
